--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Блок Герой -->
     <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <a href="">Замовити послугу</a>
+            <button type="button">Замовити послугу</button>
     </section>
     
     <!-- Блок Списку -->
@@ -61,9 +61,9 @@
     <section>
         <h3>Чим ми займаємося</h3>
         <ul>
-            <li><img src="./images/imgone.jpg"></a>1</li>
-            <li><img src="./images/imgtwo.jpg"></a>2</li>
-            <li><img src="./images/imgthree.jpg"></a>3</li>
+            <li><img src="./images/imgone.jpg" width="150" alt="computer"></a>1</li>
+            <li><img src="./images/imgtwo.jpg" width="150" alt="notebook"></a>2</li>
+            <li><img src="./images/imgthree.jpg" width="150" alt="tablet"></a>3</li>
         </ul>
     </section>
 
@@ -71,10 +71,10 @@
     <section>
         <h3>Наша команда</h3>
         <ul>
-            <li><img src="./images/Product Designer.jpg"></a>Ігор Дем'яненко Product Designer</li>
-            <li><img src="./images/Frontend Dev.jpg"></a>Ольга Рєпіна Frontend Developer</li>
-            <li><img src="./images/Marketing.jpg"></a>Микола Тарасов Marketing</li>
-            <li><img src="./images/UI Designer.jpg"></a>Михайло Єрмаков UI Designer</li>
+            <li><img src="./images/Product Designer.jpg" width="150" alt="Product Designer"></a>Ігор Дем'яненко <p>Product Designer</p> </li>
+            <li><img src="./images/Frontend Dev.jpg" width="150" alt="Frontend Developer"></a>Ольга Рєпіна <p>Frontend Developer</p></li>
+            <li><img src="./images/Marketing.jpg" width="150" alt="Marketing"></a>Микола Тарасов <p>Marketing</p></li>
+            <li><img src="./images/UI Designer.jpg" width="150" alt="Designer"></a>Михайло Єрмаков <p>UI Designer</p></li>
         </ul>
     </section>
 </main>
