--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
             <li ><a href="">Студія</a></li>
             <li><a href="">Портфоліо</a></li>
             <li><a href="">Контакти</a></li>
-            <li><a href="">Студія</a></li>
-        </ul>
+            </ul>
         </nav>
 
         <ul>
             <li><a href="mailto:info@devstudio.com"></a>info@devstudio.com</li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
         </ul>
         
     </header>
@@ -36,22 +35,22 @@
     <section>
         <ul>
             <li>
-                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
 
             <li>
-                <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
                 <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
 
             <li>
-                <h2>ПЛАНУВАННЯ</h2>
+                <h3>ПЛАНУВАННЯ</h3>
                 <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
 
             <li>
-                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
@@ -61,9 +60,9 @@
     <section>
         <h3>Чим ми займаємося</h3>
         <ul>
-            <li><img src="./images/imgone.jpg" width="150" alt="computer"></a>1</li>
-            <li><img src="./images/imgtwo.jpg" width="150" alt="notebook"></a>2</li>
-            <li><img src="./images/imgthree.jpg" width="150" alt="tablet"></a>3</li>
+            <li><img src="./images/imgone.jpg" width="370" alt="компютер">1</li>
+            <li><img src="./images/imgtwo.jpg" width="370" alt="ноутбук">2</li>
+            <li><img src="./images/imgthree.jpg" width="370" alt="планшет">3</li>
         </ul>
     </section>
 
@@ -71,10 +70,10 @@
     <section>
         <h3>Наша команда</h3>
         <ul>
-            <li><img src="./images/Product Designer.jpg" width="150" alt="Product Designer"></a>Ігор Дем'яненко <p>Product Designer</p> </li>
-            <li><img src="./images/Frontend Dev.jpg" width="150" alt="Frontend Developer"></a>Ольга Рєпіна <p>Frontend Developer</p></li>
-            <li><img src="./images/Marketing.jpg" width="150" alt="Marketing"></a>Микола Тарасов <p>Marketing</p></li>
-            <li><img src="./images/UI Designer.jpg" width="150" alt="Designer"></a>Михайло Єрмаков <p>UI Designer</p></li>
+            <li><img src="./images/ProductDesigner.jpg" width="270" alt="Продукт Дизайнер"><h3>Ігор Дем'яненко</h3> <p>Product Designer</p> </li>
+            <li><img src="./images/FrontendDev.jpg" width="270" alt="Фронтенд дев"><h3>Ольга Рєпіна</h3> <p>Frontend Developer</p></li>
+            <li><img src="./images/Marketing.jpg" width="270" alt="Маркетинг"><h3>Микола Тарасов</h3> <p>Marketing</p></li>
+            <li><img src="./images/UIDesigner.jpg" width="270" alt="Дизайнер"><h3>Михайло Єрмаков</h3> <p>UI Designer</p></li>
         </ul>
     </section>
 </main>
@@ -87,7 +86,7 @@
         
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
